--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   firebase_core: ^0.4.5
   firebase_auth: ^0.16.1
   cloud_firestore: 0.13.6
+  google_sign_in: ^4.5.1
   cupertino_icons: ^0.1.3
 
 dev_dependencies:
