--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,9 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^0.4.5
   firebase_auth: ^0.16.1
-  cloud_firestore: 0.13.6
+  cloud_firestore: ^0.13.6
   google_sign_in: ^4.5.1
   cupertino_icons: ^0.1.3
 
