--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   cloud_firestore: ^0.13.6
   google_sign_in: ^4.5.1
   cupertino_icons: ^0.1.3
+  provider: ^4.1.3
 
 dev_dependencies:
   flutter_test:
