--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,9 +25,12 @@ dependencies:
     sdk: flutter
   firebase_auth: ^0.16.1
   cloud_firestore: ^0.13.6
+  firebase_storage: ^3.1.6
+  cloud_functions: ^0.5.0
   google_sign_in: ^4.5.1
   cupertino_icons: ^0.1.3
   provider: ^4.1.3
+  image_picker: ^0.6.7+1
 
 dev_dependencies:
   flutter_test:
