--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   provider: ^4.1.3
   image_picker: ^0.6.7+1
+  algolia: ^0.1.6+1
 
 dev_dependencies:
   flutter_test:
