--- a/functions/package.json
+++ b/functions/package.json
@@ -13,8 +13,10 @@
     "node": "8"
   },
   "dependencies": {
+    "algoliasearch": "^4.3.0",
     "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.6.1"
+    "firebase-functions": "^3.6.1",
+    "save": "^2.4.0"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
