--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   provider: ^4.1.3
   image_picker: ^0.6.7+1
   algolia: ^0.1.6+1
+  intl: ^0.16.1
 
 dev_dependencies:
   flutter_test:
